--- a/3_Extract_Data_from_Irregular_Boundary.ipynb
+++ b/3_Extract_Data_from_Irregular_Boundary.ipynb
@@ -105,6 +105,7 @@
     "import numpy.ma as ma  # for masking arrays\n",
     "import pandas as pd  # for tabular data\n",
     "import xarray as xr  # for gridded data\n",
+    "import matplotlib.pyplot as plt\n",
     "import shapely"
    ]
   },
@@ -432,11 +433,11 @@
     "sst_masked = sst.copy(deep=True, data=None)\n",
     "\n",
     "# Apply the mask to each time slice\n",
-    "for i in range(0, len(sst_masked.time)+1):\n",
+    "for i in range(0, len(sst_masked.time)):\n",
     "    sst_masked[i,:,:] = sst_masked.isel(time=i).where(mask == 1)\n",
     "\n",
     "#Plot the results for each time slice\n",
-    "for i in range(0,len(sst_masked.time)+1):\n",
+    "for i in range(0,len(sst_masked.time)):\n",
     "    ax = plt.subplot()\n",
     "    sst_masked.isel(time=i).plot.imshow()\n",
     "    plt.show()"
