fixed certificate issue

--- a/4_compare_sensor_data_edmw.ipynb
+++ b/4_compare_sensor_data_edmw.ipynb
@@ -38,6 +38,7 @@
     "import netCDF4 as nc \n",
     "import pandas as pd \n",
     "import numpy as np \n",
+    "import ssl\n",
     "from matplotlib import pyplot as plt \n",
     "from matplotlib.colors import LinearSegmentedColormap \n",
     "np.warnings.filterwarnings('ignore')"
@@ -79,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "('sw.nc', <http.client.HTTPMessage at 0x1a921913788>)"
+       "('sw.nc', <http.client.HTTPMessage at 0x22bbcf946c8>)"
       ]
      },
      "execution_count": 2,
@@ -89,6 +90,7 @@
    ],
    "source": [
     "url = 'https://oceanwatch.pifsc.noaa.gov/erddap/griddap/sw_chla_monthly_2018_0.nc?chlor_a[(1997-10-16T12:00:00Z):1:(2010-10-16T12:00:00Z)][(25):10:(15)][(198):10:(208)]' \n",
+    "ssl._create_default_https_context = ssl._create_unverified_context\n",
     "urllib.request.urlretrieve(url, \"sw.nc\")"
    ]
   },
